# fm-fabricutils

./: AGENTS.md  README.md  main.py  pyproject.toml  ruff.toml
fabricutils/: hello.py
src/fabricutils/: appconfig.py  fileutils.py  fileutils_future.py  lakehouse_mappings.json  lakehouse_mappings.yaml
